major attribute refactoring! all defaults are in attributes/*.rb, default.rb is purely component-based (still some todos there, but almost done). Only recipes set values on top of defaults, depending on component activation; no overrides are used, to allow end user to override via Chef node definition